--- a/main/tutorials/l_master.ipynb
+++ b/main/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5c1a0018",
+   "id": "b862d12e",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a8d4d78",
+   "id": "d749fb9d",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ad7071b",
+   "id": "c51fed71",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc3d6dd2",
+   "id": "31e94a9d",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36d60f3f",
+   "id": "966a4d24",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05579074",
+   "id": "e3f9d19b",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9ef8f10d",
+   "id": "b0097be4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T07:34:18.657298Z",
-     "iopub.status.busy": "2025-02-06T07:34:18.657124Z",
-     "iopub.status.idle": "2025-02-06T07:34:21.699819Z",
-     "shell.execute_reply": "2025-02-06T07:34:21.699223Z"
+     "iopub.execute_input": "2025-02-06T09:05:34.435395Z",
+     "iopub.status.busy": "2025-02-06T09:05:34.435219Z",
+     "iopub.status.idle": "2025-02-06T09:05:37.828471Z",
+     "shell.execute_reply": "2025-02-06T09:05:37.827915Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b00fb079",
+   "id": "5d722ed2",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17e59e25",
+   "id": "bbfa1d86",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f0e7da8",
+   "id": "b273a6ba",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32c52bcb",
+   "id": "1bdf75d3",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "484444af",
+   "id": "5cb303b5",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21f9cc26",
+   "id": "a00d37b3",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7af9a2a8",
+   "id": "d4f533dc",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "163fa2fb",
+   "id": "bc1beddb",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ff69a2cf",
+   "id": "a0eea3e0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T07:34:21.702413Z",
-     "iopub.status.busy": "2025-02-06T07:34:21.701899Z",
-     "iopub.status.idle": "2025-02-06T07:34:23.654896Z",
-     "shell.execute_reply": "2025-02-06T07:34:23.654263Z"
+     "iopub.execute_input": "2025-02-06T09:05:37.830956Z",
+     "iopub.status.busy": "2025-02-06T09:05:37.830488Z",
+     "iopub.status.idle": "2025-02-06T09:05:40.001421Z",
+     "shell.execute_reply": "2025-02-06T09:05:40.000871Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ac72b4a",
+   "id": "25c8945a",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8e3b84cf",
+   "id": "3ed6ac03",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T07:34:23.656864Z",
-     "iopub.status.busy": "2025-02-06T07:34:23.656672Z",
-     "iopub.status.idle": "2025-02-06T07:34:23.659941Z",
-     "shell.execute_reply": "2025-02-06T07:34:23.659366Z"
+     "iopub.execute_input": "2025-02-06T09:05:40.003426Z",
+     "iopub.status.busy": "2025-02-06T09:05:40.003053Z",
+     "iopub.status.idle": "2025-02-06T09:05:40.006547Z",
+     "shell.execute_reply": "2025-02-06T09:05:40.006077Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1d685fb",
+   "id": "1108d01b",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc556b33",
+   "id": "0cb3c252",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be9a8d4a",
+   "id": "9b69c6ae",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5689f18",
+   "id": "299b7e88",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "72585e1e",
+   "id": "2543e5be",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T07:34:23.661916Z",
-     "iopub.status.busy": "2025-02-06T07:34:23.661596Z",
-     "iopub.status.idle": "2025-02-06T07:34:23.707135Z",
-     "shell.execute_reply": "2025-02-06T07:34:23.706460Z"
+     "iopub.execute_input": "2025-02-06T09:05:40.008336Z",
+     "iopub.status.busy": "2025-02-06T09:05:40.008158Z",
+     "iopub.status.idle": "2025-02-06T09:05:40.054787Z",
+     "shell.execute_reply": "2025-02-06T09:05:40.054245Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54116bc1",
+   "id": "26d4f950",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5e20c18b",
+   "id": "b26326f1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T07:34:23.709220Z",
-     "iopub.status.busy": "2025-02-06T07:34:23.708851Z",
-     "iopub.status.idle": "2025-02-06T07:34:23.777514Z",
-     "shell.execute_reply": "2025-02-06T07:34:23.776872Z"
+     "iopub.execute_input": "2025-02-06T09:05:40.056569Z",
+     "iopub.status.busy": "2025-02-06T09:05:40.056377Z",
+     "iopub.status.idle": "2025-02-06T09:05:40.131449Z",
+     "shell.execute_reply": "2025-02-06T09:05:40.130859Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ba3f435",
+   "id": "68e61811",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e26b155",
+   "id": "5af67723",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6e870e17",
+   "id": "a7963a5e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T07:34:23.779546Z",
-     "iopub.status.busy": "2025-02-06T07:34:23.779161Z",
-     "iopub.status.idle": "2025-02-06T07:34:23.806650Z",
-     "shell.execute_reply": "2025-02-06T07:34:23.806109Z"
+     "iopub.execute_input": "2025-02-06T09:05:40.133438Z",
+     "iopub.status.busy": "2025-02-06T09:05:40.133089Z",
+     "iopub.status.idle": "2025-02-06T09:05:40.162819Z",
+     "shell.execute_reply": "2025-02-06T09:05:40.162225Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68ef54f7",
+   "id": "076f802b",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a05e9a0",
+   "id": "2b01af29",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a51c6766",
+   "id": "49f2b13d",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1643c140",
+   "id": "6d5b7dd8",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a318bdf",
+   "id": "514ab310",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9d45deeb",
+   "id": "5cae60ca",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T07:34:23.808568Z",
-     "iopub.status.busy": "2025-02-06T07:34:23.808375Z",
-     "iopub.status.idle": "2025-02-06T07:34:23.812514Z",
-     "shell.execute_reply": "2025-02-06T07:34:23.811873Z"
+     "iopub.execute_input": "2025-02-06T09:05:40.164856Z",
+     "iopub.status.busy": "2025-02-06T09:05:40.164490Z",
+     "iopub.status.idle": "2025-02-06T09:05:40.168840Z",
+     "shell.execute_reply": "2025-02-06T09:05:40.168103Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7982ed7a",
+   "id": "0d7e0ff1",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "09388509",
+   "id": "9de1a603",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T07:34:23.814212Z",
-     "iopub.status.busy": "2025-02-06T07:34:23.813895Z",
-     "iopub.status.idle": "2025-02-06T07:34:23.816933Z",
-     "shell.execute_reply": "2025-02-06T07:34:23.816367Z"
+     "iopub.execute_input": "2025-02-06T09:05:40.170661Z",
+     "iopub.status.busy": "2025-02-06T09:05:40.170337Z",
+     "iopub.status.idle": "2025-02-06T09:05:40.173226Z",
+     "shell.execute_reply": "2025-02-06T09:05:40.172767Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8db99b9e",
+   "id": "2c458298",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1071a769",
+   "id": "97d69437",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T07:34:23.818625Z",
-     "iopub.status.busy": "2025-02-06T07:34:23.818426Z",
-     "iopub.status.idle": "2025-02-06T07:34:26.424014Z",
-     "shell.execute_reply": "2025-02-06T07:34:26.423396Z"
+     "iopub.execute_input": "2025-02-06T09:05:40.174848Z",
+     "iopub.status.busy": "2025-02-06T09:05:40.174650Z",
+     "iopub.status.idle": "2025-02-06T09:05:42.865725Z",
+     "shell.execute_reply": "2025-02-06T09:05:42.865103Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5f27278",
+   "id": "11c7a00c",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f993b635",
+   "id": "abc3d9e3",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94c67ac4",
+   "id": "d8038268",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "844b5b17",
+   "id": "3c28475c",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8f4b798f",
+   "id": "e734e41f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T07:34:26.426170Z",
-     "iopub.status.busy": "2025-02-06T07:34:26.425822Z",
-     "iopub.status.idle": "2025-02-06T07:34:26.429299Z",
-     "shell.execute_reply": "2025-02-06T07:34:26.428754Z"
+     "iopub.execute_input": "2025-02-06T09:05:42.867759Z",
+     "iopub.status.busy": "2025-02-06T09:05:42.867544Z",
+     "iopub.status.idle": "2025-02-06T09:05:42.871357Z",
+     "shell.execute_reply": "2025-02-06T09:05:42.870716Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f07de6dfe20>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f80891d89a0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aae6fb77",
+   "id": "006747d0",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84cb5603",
+   "id": "f56bcbba",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84c7d836",
+   "id": "d45c726c",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7167dbae",
+   "id": "9e0fd72f",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "46b9b3b7",
+   "id": "2641baff",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T07:34:26.431250Z",
-     "iopub.status.busy": "2025-02-06T07:34:26.430908Z",
-     "iopub.status.idle": "2025-02-06T07:34:26.434052Z",
-     "shell.execute_reply": "2025-02-06T07:34:26.433396Z"
+     "iopub.execute_input": "2025-02-06T09:05:42.873168Z",
+     "iopub.status.busy": "2025-02-06T09:05:42.872984Z",
+     "iopub.status.idle": "2025-02-06T09:05:42.876029Z",
+     "shell.execute_reply": "2025-02-06T09:05:42.875539Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e7d345f9",
+   "id": "bfcaa748",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-06T07:34:26.436183Z",
-     "iopub.status.busy": "2025-02-06T07:34:26.435695Z",
-     "iopub.status.idle": "2025-02-06T07:34:27.505456Z",
-     "shell.execute_reply": "2025-02-06T07:34:27.504867Z"
+     "iopub.execute_input": "2025-02-06T09:05:42.877877Z",
+     "iopub.status.busy": "2025-02-06T09:05:42.877484Z",
+     "iopub.status.idle": "2025-02-06T09:05:43.964897Z",
+     "shell.execute_reply": "2025-02-06T09:05:43.964300Z"
     }
    },
    "outputs": [
